# QCAD

./: .gitignore  .test.py.swp  CMakeLists.txt  LICENSE  README.md  Test.ipynb  Tutorial.ipynb  __init__.py  test.py
Backend/: .build.sh.swp  backend.py  cimulator.py  matrixmodel.py
Backend/C/: calc.cpp
CircuitDrawer/: circuit_drawer.py
Modules/: execute.py
Modules/Backend/: cimulator.py  matrixmodel.py
Modules/Backend/C/: calc.h
Modules/CircuitDrawer/: __init__.py  qasm2png  qasm2tex.py
QCAD/: .qcad2qasm.py.swp  __init__.py  bit.py  exam.py  execute.py  gate.py  module.py  qcad2qasm.py  qunautm_circuit.py  register.py
QCAD/Backend/: __init__.py  backend.py  build.sh  cimulator.py  comm.py  matrixmodel.py  nomm.py  optimizedgate.py  optimizedgate_extended.py
QCAD/Backend/C/: calc.cpp  core.cpp  gate.cpp  gate.h  test.cpp  utill.cpp  utill.h
QCAD/CircuitDrawer/: circuit_drawer.py  qasm2png
QCAD/Test/: Tutorial.ipynb  exam.py  exam2.py  performance_test.py
